# binance-futures-bot

./: .env.example  .gitignore  .replit  Procfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  replit.md  start_production.sh
.agents/: agent_assets_metadata.toml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/lib/: research-engine.ts  signal-engine.ts  telegram.ts
artifacts/dashboard/: index.html
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/src/: App.tsx  index.css
attached_assets/: Pasted--Aviator-BG-Network-enabled-for-child-session-9FF57D6C-_1775275404783.txt  Pasted-import-requests-import-time-TELEGRAM-TOKEN-8772294732--_1775094657371.txt  Pasted-import-requests-import-time-import-math-from-datetime-i_1775230533317.txt  bot_mejorado.py  messages_1775240847767.html
aviator-research-betwinner/: README.md
aviator-research-betwinner/chrome-extension/: background.js  content.js  dashboard.html  dashboard.js  injector.js  manifest.json  popup.html  popup.js
chrome-extension/: background.js  content.js  injector.js  manifest.json  popup.js
chrome-extension - betwinner/: manifest.json  popup.html
futures_bot/: __init__.py  backtesting.py  bot.py  config.py  data_engine.py  decision_engine.py  execution_engine.py  models.py  monitoring.py  optimization.py  persistence.py  portfolio_manager.py  risk_engine.py  status_server.py  strategy_engine.py
futures_bot/utils/: indicators.py
lib/api-spec/: openapi.yaml
lib/db/src/schema/: aviator.ts  (+1 more)
railway_deploy/: main.py
(+2 files in other folders)
